# nanoproxy

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Gopkg.toml  README.md  build.rs  format.go  go.mod  go.sum  nanoproxy.go  stats.go
.github/: dependabot.yml
.github/workflows/: pr.yml  release.yaml  rust.yml
cmd/nanoproxy/: main.go
handler/httpproxy/: http.go
handler/upstream/: upstream.go
requests/: request.go
src/: connection.rs  connector.rs  credentials.rs  dial.rs  frontend.rs  main.rs  pac.rs  pac_utils.js  resolver.rs  tracker.rs
src/adapters/: mod.rs
src/adapters/credentials/: mod.rs  provider.rs
src/adapters/hyper_server/: adapter.rs  connector.rs  http_client.rs  mod.rs
src/adapters/pac_resolver/: beacon.rs  gateway.rs  mod.rs  pac_evaluator.rs  resolvconf.rs  resolver.rs
src/adapters/reqwest_client/: mod.rs
src/adapters/tracking/: mod.rs  tracker.rs
src/domain/: errors.rs  mod.rs  models.rs  service.rs
src/ports/: connector.rs  credentials.rs  http_client.rs  mod.rs  resolver.rs  tracking.rs  tunnel.rs
tests/: direct_proxy_e2e.rs  intermediate_proxy_test.rs  nanoproxy_e2e_test.rs  proxy_chaining_e2e.rs
tests/e2e_utils/: intermediate_proxy.rs  mod.rs  nanoproxy_server.rs  proxy_chain_fixture.rs
units/: README.md  nanoproxy.plist
