[package]
name = "nanoproxy"
version = "0.1.0"
authors = ["Julien BONACHERA <julien.bonachera@fortuneo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
notify = "6.1.1"
ipnet = "2.11.0"
resolv-conf = "0.7.0"
notify-debouncer-mini = "0.4.1"
tokio = { version = "1", features = ["full", "net"] }
clap = { version = "4", features = ["derive"] }
confy = "1.0.0"
headers = "0.4.1"
async-trait = "0.1.58"
futures = "0.3.25"
base64 = "0.22.1"
url = "2.3.1"
js-sandbox = { version = "0.2.0-rc.2" }
reqwest = "0.12.15"
act-zero = { version = "0.4.0", features = ["tokio"] }
lru = "0.16.0"
log = { version = "0.4", features = ["kv_unstable"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.147", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
rlimit = "0.10.2"
