[package]
name = "nanoproxy"
version = "0.1.0"
authors = ["Julien BONACHERA <julien.bonachera@fortuneo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
tower-service = "0.3"
ipnet = "2.11.0"
resolv-conf = "0.7.0"
notify-debouncer-mini = "0.7.0"
tokio = { version = "1", features = ["full", "net"] }
clap = { version = "4", features = ["derive"] }
confy = "1.0.0"
async-trait = "0.1.58"
futures = "0.3.25"
base64 = "0.22.1"
url = "2.3.1"
boa_engine = { version = "0.21" }
reqwest = "0.12.24"
lru = "0.16.0"
log = { version = "0.4", features = ["kv_unstable"] }
env_logger = "0.11"
serde = { version = "1.0.147", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
rlimit = "0.10.2"
